<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdgeLength="0dp"
        android:background="#ffffffff">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="#ffffffff">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/settings_image"
                    android:src="@drawable/camera_square_transparent" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_photo"
                    android:id="@+id/change_picture_button"
                    android:layout_gravity="center"
                    android:textAlignment="gravity"
                    android:singleLine="false"
                    android:gravity="left|center_vertical"
                    android:clickable="true"
                    android:textSize="18dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView14"
                    android:src="@drawable/editprofileicon_name" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_name"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/profile_name"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView15"
                    android:src="@drawable/editprofileicon_email" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_email"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:inputType="textEmailAddress"
                    android:text="@string/profile_email"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/bloopbloop">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView16"
                    android:src="@drawable/editprofileicon_instagram" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_instagram"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:hint="@string/edit_instagram" />

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView17"
                    android:src="@drawable/editprofileicon_snapchat" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_snapchat"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:hint="@string/edit_snapchat" />

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:id="@+id/textView3"
                    android:textSize="18sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@android:color/darker_gray"
                    android:layout_gravity="top"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/edit_bio"
                    android:layout_weight="0.31"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/profile_bio"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:id="@+id/textView83735"
                android:layout_weight="0.11"
                android:clickable="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_feature"
                android:id="@+id/textView78535"
                android:layout_weight="0.11"
                android:clickable="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_us"
                android:id="@+id/textView63735"
                android:layout_weight="0.11"
                android:clickable="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="normal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/textView98735"
                android:layout_weight="0.11"
                android:clickable="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>